<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.temple.bitcoin.Address_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_weight="0.3"
            android:text="@string/address" />

        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/address_edit_text"
            android:layout_weight="0.45" />

        <Button
            android:id="@+id/addressbutton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/GO" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/balance_in_usd" />

            <TextView
                android:id="@+id/balusd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/balance_in_btc" />

            <TextView
                android:id="@+id/balbtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
