<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.bitcoin.price_index_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtbtctousd"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/btctousd"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/value"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtusdtobtc"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/usdtobtc"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/utb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/value"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtbuy"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/buy"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/value"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtsell"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/sell"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:elevation="3dp"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="246dp"
            android:layout_gravity="bottom"
            android:src="@drawable/bitcoin" />

    </LinearLayout>
</FrameLayout>
